Increases function name hitbox size
Previously function names were displayed inline rather than block, which made their hitbox only as wide as the word itself. This made it really hard to click on functions like 'is' and 'I'. Now it is displayed as a block element so they all take as much width as possible.

--- a/static/styles/jaguar.css
+++ b/static/styles/jaguar.css
@@ -94,7 +94,10 @@ li {
 .navigation li.item ul > li {
   font-size: 0.7em;
   padding-left: 8px;
-  margin-top: 2px;
+}
+.navigation li.item ul > li > a {
+  padding: 4px;
+  display: block;
 }
 .navigation li.item .itemMembers {
   display: none;
