--- a/less/hljs.less
+++ b/less/hljs.less
@@ -8,12 +8,23 @@
     font-weight: bold;
 }
 
+.hljs-regexp,
 .hljs-string,
 .hljs-number {
     color: #fa8;
 }
 
+pre,
 .hljs {
     background: darken(@brand-primary, 15%);
     color: darken(@brand-primary, -45%);
+}
+
+pre {
+    border: 0;
+    border-radius: 0;
+    margin-left: -15px;
+    margin-right: -15px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
