Docs build into dist/gh-pages/ now

--- a/jsdoc-template/index.html.handlebars
+++ b/jsdoc-template/index.html.handlebars
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ramda Documentation</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <header class="navbar navbar-fixed-top navbar-inverse container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="#">
                 <strong>Ramda</strong>
                 <span class="version">v{{version}}</span>
             </a>
