--- a/jsdoc-template/docs.html.handlebars
+++ b/jsdoc-template/docs.html.handlebars
@@ -7,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.2.0/knockout-min.js"></script>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
     <header class="navbar navbar-fixed-top navbar-inverse container-fluid">
@@ -19,7 +19,7 @@
         </div>
         <div class="navbar-left">
             <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
+                <li><a href="..">Home</a></li>
                 <li class="active"><a href="#">Documentation</a></li>
             </ul>
         </div>
