Less purple in docs page

--- a/less/hljs.less
+++ b/less/hljs.less
@@ -1,6 +1,5 @@
 .hljs-comment {
-    color: #9d4;
-    font-weight: bold;
+    color: #de6;
 }
 
 .hljs-keyword {
@@ -11,13 +10,13 @@
 .hljs-regexp,
 .hljs-string,
 .hljs-number {
-    color: #fa8;
+    color: #fc9;
 }
 
 pre,
 .hljs {
-    background: darken(@brand-primary, 15%);
-    color: darken(@brand-primary, -45%);
+    background: #333;
+    color: #ccc;
 }
 
 pre {
