--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -27,6 +27,10 @@
 
         overflow: auto;
 
+        li {
+            margin: 0;
+        }
+
         a {
             padding: @padding @margin;
             border-radius: 0;
