--- a/less/card.less
+++ b/less/card.less
@@ -1,6 +1,19 @@
 @padding: 15px;
 @radius: 2px;
+
+.btn-outline() {
+    background: fade(@link-color, 10%);
+    border: 2px solid fade(@link-color, 30%);
+    color: @link-color;
+    border-radius: @border-radius-base;
+
+    &:hover {
+        background: fade(@link-color, 20%);
+    }
+}
+
 .card {
+    font-size: ceil((@font-size-base + 2px));
 
     margin: 0 0 @padding 0;
     border: 1px solid #fff;
@@ -16,37 +29,45 @@
         border: 0;
         border-radius: 0;
 
+        font-size: @font-size-base;
+
         code {
             padding: @padding;
             display: block;
         }
     }
 
+    .returns {
+        font-style: italic;
+    }
+
     .name {
-        font-family: @font-family-monospace;
         color: inherit;
     }
 
-    h2 .name {
+    h2 {
+        margin-top: 0;
+
+        .name {
             font-weight: bold;
+        }
     }
 
     .description {
         margin-top: @padding;
+        white-space: wrap;
     }
 
     .sig {
         font-family: Verdana, @font-family-sans-serif;
         white-space: normal;
         text-align: left;
+
+        .btn-outline();
     }
 
     .details {
-        padding-left: (3 * @padding);
-
-        h3 {
-            font-size: 16px;
-        }
+        margin-top: @padding-base-vertical;
     }
 
     .type {
