--- a/less/variables.less
+++ b/less/variables.less
@@ -11,4 +11,7 @@
 @navbar-inverse-link-color: mix(@brand-primary, #fff, 25%);
 @navbar-inverse-link-active-bg: darken(@navbar-inverse-bg, 10%);
 
+@code-color: #000;
+@code-bg: #eee;
+
 @grid-float-breakpoint: 0;
