add fork button to docs header

--- a/jsdoc-template/index.html.handlebars
+++ b/jsdoc-template/index.html.handlebars
@@ -20,6 +20,9 @@
                 <li><a href="docs">Documentation</a></li>
             </ul>
         </div>
+        <div class="navbar-right">
+            <iframe class="forkme" src="http://ghbtns.com/github-btn.html?user=ramda&repo=ramda&type=fork&size=large" height="30" width="100" frameborder="0" scrolling="0" style="width:100px; height: 30px;" allowTransparency="true"></iframe>
+        </div>
     </header>
     <main class="container">
         <article>{{> readme}}</article>
