--- a/lib/doc/jsdoc-template/docs.html.handlebars
+++ b/lib/doc/jsdoc-template/docs.html.handlebars
@@ -18,6 +18,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="..">Home</a></li>
                 <li class="active"><a href="#">Documentation</a></li>
+                <li><a href="/repl?v={{version}}">Try Ramda</a></li>
             </ul>
         </div>
         <div class="navbar-right">
