site: replace fork button with GitHub link in navigation bar

--- a/lib/doc/jsdoc-template/docs.html.handlebars
+++ b/lib/doc/jsdoc-template/docs.html.handlebars
@@ -19,10 +19,8 @@
                 <li><a href="..">Home</a></li>
                 <li class="active"><a href="#">Documentation</a></li>
                 <li><a href="/repl?v={{version}}">Try Ramda</a></li>
+                <li><a href="https://github.com/ramda/ramda">GitHub</a></li>
             </ul>
-        </div>
-        <div class="navbar-right">
-          <iframe class="forkme" src="http://ghbtns.com/github-btn.html?user=ramda&repo=ramda&type=fork&size=large" height="30" width="100" frameborder="0" scrolling="0" style="width:100px; height: 30px;" allowTransparency="true"></iframe>
         </div>
     </header>
     <aside class="sidebar container-fluid">
