improve docs filter input
docs: automatically focus filter input

docs/filter: go to the first entry on Enter keypress

--- a/lib/doc/jsdoc-template/docs.html.handlebars
+++ b/lib/doc/jsdoc-template/docs.html.handlebars
@@ -31,6 +31,7 @@
                    placeholder="Filter"
                    type="text"
                    data-bind="textInput: filter"
+                   autofocus
             >
             <span class="form-control-feedback">
                 <span class="glyphicon glyphicon-search"></span>
@@ -107,7 +108,7 @@
     <script>
         var DOC_DATA = {{json data}};
     </script>
-    <script src="main.js"></script>
     <script src="dist/ramda.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
